@@ -3535,6 +3535,10 @@
                     "category": "a_nav_breadcrumbs"
                 },
                 {
+                    "name": "breadcrumbHome",
+                    "category": "a_nav_breadcrumbs"
+                },
+                {
                     "name": "breadcrumbCurrent",
                     "category": "a_nav_breadcrumbs"
                 },
