@@ -1,0 +1,8 @@
+<span property="itemListElement" typeof="ListItem">
+    <a class="section" property="item" typeof="WebPage" href="[[~[[++site_start]]? &scheme=`full`]]">
+        <i class="icon home"></i>
+        <meta property="name" content="[[%romanesco.menu.brand]]">
+    </a>
+    <meta property="position" content="[[+idx]]">
+</span>
+<i class="right angle icon divider"></i>
