@@ -1,10 +1,9 @@
-<nav id="breadcrumbs">
-    [[pdoCrumbs?
-        &showHome=`0`
-        &tplWrapper=`breadcrumbOuter`
-        &tpl=`breadcrumbRow`
-        &tplCurrent=`breadcrumbCurrent`
-        &outputSeparator=``
-        &where=`[{"alias_visible:!=":"0"}]`
-    ]]
-</nav>
+[[pdoCrumbs?
+    &showHome=`1`
+    &tplWrapper=`breadcrumbOuter`
+    &tpl=`breadcrumbRow`
+    &tplHome=`breadcrumbHome`
+    &tplCurrent=`breadcrumbCurrent`
+    &outputSeparator=``
+    &where=`[{"alias_visible:!=":"0"}]`
+]]
